[gd_scene load_steps=24 format=1]

[ext_resource path="res://scripts/ship.gd" type="Script" id=1]
[ext_resource path="res://resources/animated_ship.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/Sounds/explosion.wav" type="Sample" id=3]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.1.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.2.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.3.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.4.png" type="Texture" id=7]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.5.png" type="Texture" id=8]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.6.png" type="Texture" id=9]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.7.png" type="Texture" id=10]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.8.png" type="Texture" id=11]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.9.png" type="Texture" id=12]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.10.png" type="Texture" id=13]
[ext_resource path="res://resources/shieldshader.tres" type="Shader" id=14]
[ext_resource path="res://assets/Images/white.png" type="Texture" id=15]
[ext_resource path="res://scripts/shader.gd" type="Script" id=16]
[ext_resource path="res://assets/Images/whitehole.png" type="Texture" id=17]
[ext_resource path="res://scripts/shadow.gd" type="Script" id=18]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -24.181, 39.7297, -27.4208, -9.63426, -13.0976, -39.048, 2.76028, -37.6839, 10.1777, 32.6534 )

[sub_resource type="Animation" id=2]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SampleLibrary" id=3]

samples/explosion = {
"db": -10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CanvasItemMaterial" id=5]

shader/shader = ExtResource( 14 )
shader/shading_mode = 0

[node name="ship" type="Area2D"]

transform/pos = Vector2( 169.788, 343.386 )
transform/rot = -90.0
z/z = 1
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.225403, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="get_hits" type="Position2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explosion = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="collision" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 0.225403, 0 )
build_mode = 0
polygon = Vector2Array( 10.1777, 32.6534, 2.76028, -37.6839, -13.0976, -39.048, -27.4208, -9.63426, -24.181, 39.7297 )
shape_range = Vector2( 0, 0 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="frames" type="AnimatedSprite" parent="."]

transform/pos = Vector2( -2.79742, 8.92931 )
transform/rot = 90.0
transform/scale = Vector2( 0.35, 0.35 )
frames = ExtResource( 2 )
animation = "default"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="shoot_from" type="Position2D" parent="."]

transform/pos = Vector2( 16.0753, -47.6257 )
__meta__ = {
"_edit_lock_": true
}

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="explosion" type="AnimatedSprite" parent="."]

visibility/visible = false
transform/pos = Vector2( -7.32651, 2.785 )
transform/scale = Vector2( 0.281573, 0.281573 )
frames = SubResource( 4 )
animation = "default"
frame = 9

[node name="shader" type="Sprite" parent="."]

visibility/visible = false
material/material = SubResource( 5 )
transform/pos = Vector2( -4.94492, 6.8206 )
transform/rot = 90.0
z/z = -1
texture = ExtResource( 15 )
script/script = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="shadow" type="Light2D" parent="shader"]

transform/pos = Vector2( 4.24701, -0.149323 )
transform/scale = Vector2( 2.22454, 2.15747 )
z/z = 1
enabled = true
editor_only = false
texture = ExtResource( 17 )
offset = Vector2( 1.47336, 1.98471 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 3
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 2
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1
script/script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="shield_off" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="animation_started" from="anim" to="." method="_on_anim_animation_started"]

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="timeout" from="shield_off" to="." method="_on_shield_off_timeout"]


